<resources>
    <string name="app_name">HCS_SPAJAM_Rensyu</string>
    <string name="buttonJapan">Japan</string>
    <string name="buttonUSA">USA</string>
    <string name="buttonFrance">France</string>
    <string name="buttonChina">China</string>
    <string name="buttonSpain">Spain</string>
    <string name="buttonItaly">Italy</string>
    <string name="buttonTurkey">Turkey</string>
    <string name="buttonGermany">Germany</string>
    <string name="buttonRussia">Russia</string>
    <string name="buttonMexico">Mexico</string>
    <string name="buttonHongKong">HongKong</string>
    <string name="buttonMalaysia">Malaysia</string>
    <string name="Allergy">主なアレルギー</string>
    <string name="eat_method">食べ方</string>
    <string name="review">レビュー</string>
    <string name="eat1">①</string>
    <string name="sobasetumei">日本の伝統的な麺料理。そば粉と小麦粉から作った麺です。</string>
</resources>
